# ay-121

./: .gitignore  README.md  astron-121-quickstart.md  pyproject.toml  requirements.txt  research.log.md
docs/ugradiolab/: README.md  architecture.md  quickstart.md
labs/02/: analysis.ipynb  analysis_cache_baseline_sys.pkl  analysis_cache_path_a.pkl  analysis_cache_path_b.pkl  calibration_results.npz  calibration_results_v2.npz  equipment_calibration.ipynb  equipment_calibration_results.npz  equipment_calibration_results_v2.npz  experiment-length-simulation.ipynb  lab_2_0_preview_plot.py  lab_2_1.ipynb  lab_2_1_analysis.ipynb  lab_2_2_attenuation.ipynb  lab_2_cold_cal.ipynb  lab_2_galactic_obs.ipynb  lab_2_hi_drift.ipynb  lab_2_hot_cal.ipynb  observation.plan.md  part-9.ipynb  temperature_calibration.ipynb  termination_reflectometry.ipynb  time_pointing.ipynb
labs/03/: M1.ipynb  analysis.ipynb  baseline.ipynb  baseline.py  baseline_sun.ipynb  baseline_sun_archive.ipynb  baseline_sun_old.ipynb  diagnostic.ipynb  diagnostic_m1.ipynb  diagnostic_m17.ipynb  diagnostic_moon.ipynb  diagnostic_sun.ipynb  diagnostic_sun_archive.ipynb  example.ipynb  sun-baseline.ipynb
scripts/: migrate_records.py
tests/: test_attenuation_collect.py  test_import_and_continuous.py  test_interf_experiment.py  test_lab02_notebook_helpers.py  test_lab03_chips_and_plotter.py  test_multi_calibration.py  test_ugradiolab.py  test_ugradiolab_data_and_experiment.py  test_unknown_length_collect.py
ugradiolab/: API.md  __init__.py  experiment.py  io.py  lab.py  pointing.py  queue.py  utils.py
(+145 files in other folders)
