[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ugradiolab"
version = "0.1.0"
description = "AY121 lab helpers for SDR capture and signal generator control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
include = ["ugradiolab*"]
