[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ugradiolab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "ntplib",
    "ugradio",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ugradiolab*"]
